Corrigido bug com z-index

--- a/src/components/header/Search.scss
+++ b/src/components/header/Search.scss
@@ -2,6 +2,7 @@
 
 #header-search {
     position: absolute;
+    z-index: 2;
     top: 64px;
     left: 0;
     right: 0;
